--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kommunicate-widget",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "A npm plugin for kommunicate chat widget.",
-  "author": "Prochnost55",
+  "author": "kommunicate",
   "license": "MIT",
   "repository": "",
   "main": "dist/index.js",
